# byteserver

./: Cargo.toml  LICENSE.rst  README.rst  protocol.rst  to-do.rst
src/: errors.rs  index.rs  lib.rs  lock.rs  main.rs  msg.rs  msgencode.rs  msgmacros.rs  msgparse.rs  pool.rs  reader.rs  records.rs  server.rs  server.rst  storage.rs  storage.rst  tid.rs  transaction.rs  util.rs  writer.rs
src/filestorage/: README.rst  errors.rs  index.rs  lock.rs  mod.rs  pool.rs  records.rs  tid.rs  transaction.rs  util.rs
tests/: reader.rs  storage.rs  writer.rs
