[package]
name = "byteserver"
version = "0.1.0"
authors = ["Jim Fulton <jim@zope.com>"]

[dependencies]
byteorder = "0.5.3"
error-chain = "0.5.0"
itertools = "0.5.2"
memmap = "0.4.0"
rmp = "0.7.5"
rmp-serde = "0.10.0"
serde = "0.8.12"
tempdir = "0.3.5"
tempfile = "2.1.4"
time = "0.1.35"

[dev-dependencies]
pipe = "*"

[profile.release]
debug = true
