[package]
name = "byteserver"
version = "0.1.0"
authors = ["Jim Fulton <jim@jimfulton.info>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
itertools = "0.13"
memmap2 = "0.9"
rmp = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tempfile = "3.14"
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
pipe = "0.4"

[profile.release]
debug = true
